syntax="proto3";
package chesstactoe;

service Game {
  rpc MovePiece(MovePieceRequest) returns (MovePieceResponse);
  rpc Join(JoinRequest) returns (stream JoinResponse);
  rpc SubscribeBoard(SubscribeBoardRequest) returns (stream SubscribeBoardResponse);
}

message JoinRequest {}

message JoinResponse {
  enum GameStatus {
    READY = 0;
    NOT_READY = 1;
  }

  GameStatus status = 1;
  string uuid = 2;
}

message SubscribeBoardRequest {
  string uuid = 1;
}

message SubscribeBoardResponse {
  Color color = 1;
  TicTacToe game = 2;
}

message MovePieceRequest {
  uint32 board = 1;
  string alg = 2;
  string uuid = 3;
}

enum MoveResult {
  RESULT_ERROR = 0;
  RESULT_ILLEGAL = 1;
  RESULT_SUCCESSFUL = 2;
}

message Chess {
  Color winner = 1;
  string FEN = 2;
}

message TicTacToe {
  repeated Chess chesses = 1;
  Color next = 2;
  string lastMove = 3;
}

enum Color {
  WHITE = 0;
  BLACK = 1;
  None = 2;
}

message MovePieceResponse {
  MoveResult successful = 1;
}